# sample_Native_cpp

./: README.md
android/: CMakeLists.txt  CounterNative.java  MainActivity.java  activity_main.xml  counter_jni.cpp
ios/: CounterBridge.h  CounterBridge.m  Counter_Bridge_Header.h  Main.storyboard  ViewController.swift
native_cpp/: counter.cpp  counter.h
